# ManhwaStudio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_AGENT.md
crates/ms-actions/: Cargo.toml  MODULE_README.md
crates/ms-actions/src/: action.rs  history.rs  lib.rs  raster_diff.rs
crates/ms-actions/tests/: history.rs  raster_diff.rs
crates/ms-log/: Cargo.toml  MODULE_README.md
crates/ms-log/src/: lib.rs
crates/ms-text-render/: Cargo.toml
crates/ms-text-render/src/: MODULE_README.md  VECTOR_ENGINE_REFACTOR.md  font_registry.rs  font_system_pool.rs  lib.rs  pipeline.rs  vector.rs
crates/ms-text-render/src/formula/: render.rs
crates/ms-text-render/src/layout/: vertical.rs
crates/ms-text-render/src/wrap/: horizontal.rs  vertical.rs
crates/ms-text-util/: Cargo.toml  MODULE_README.md
crates/ms-text-util/src/: lib.rs
crates/ms-text-util/src/segmentation/: ru.rs
crates/puffin_egui/: Cargo.toml  MODULE_README.md
crates/puffin_egui/src/: lib.rs
src/: app.rs  config.rs  input_manager_v2.rs  input_util.rs  main.rs  memory_manager.rs  project.rs  web_entry.rs
src/canvas/: MODULE_README.md  bubble_action.rs  bubble_aside_ui.rs  bubble_runtime.rs  mod.rs  scene.rs  types.rs
src/installer/: install.rs  update.rs  utils.rs
src/launcher/: app.rs  main_page.rs  mod.rs  psd_import_window.rs  theme.rs
src/launcher/new_project/: MODULE_README.md  advanced_download.rs  mod.rs  tutorial.rs  window.rs
src/launcher/new_project/batch_processing/: window.rs
src/launcher/pages/: settings_page.rs
src/models/: MODULE_README.md  clean_overlays_model.rs
src/models/layer_model/: layer_doc.rs  migrate.rs
src/tabs/cleaning/: tab.rs
src/tabs/cleaning/tools/: base.rs  zamazka.rs
src/tabs/ps_editor/: MODULE_README.md  edit_op.rs  mod.rs
src/tabs/ps_editor/tools/: brush.rs  deform.rs
src/tabs/settings/: mod.rs
src/tabs/translation/: adv_rec.rs  tab.rs
src/tabs/typing/: mask.rs  panel.rs  psd_export.rs  tab.rs
src/tabs/typing/panel/: create_advanced.rs  create_edit.rs  create_main_text.rs  create_sections.rs  facade.rs  ui_helpers.rs
src/tabs/typing/render_next/: MODULE_README.md  glyph_blit.rs  glyph_contour.rs  mod.rs  optical.rs  pipeline.rs  types.rs  vector.rs
src/tabs/typing/render_next/formula/: MODULE_README.md  render.rs
src/tabs/typing/render_next/layout/: MODULE_README.md  vertical.rs
src/tabs/typing/tab/: autotype.rs  create_upload.rs  doc_layers.rs  draw_page.rs  export.rs  layout_editor.rs  mesh_geometry.rs  panels.rs  render_jobs.rs  selection_rasters.rs  tests.rs
src/tutorial/: MODULE_README.md  controller.rs  engine.rs  id.rs
src/widgets/: autocomplete_line.rs  editable_combo_box.rs  spellchecked_line.rs  text_edit_plus.rs  wheel_combo_box.rs  wheel_slider.rs  wheel_spin_box.rs
src/widgets/marked_scroll/: mod.rs
wiki/: 2-Вкладка Перевод.md  4-Вкладка Текст.md  Импорт-из-psd.md  Окно-Новый-проект.md
