[package]
name = "manhwastudio_rs"
version = "3.5.0"
edition = "2024"

[workspace]
members = ["."]

[features]
active-logs = []
# Frame profiler instrumentation. Off by default for zero runtime overhead.
# Enable with `cargo run --features profiling` to record per-frame puffin scopes
# and show the puffin_egui profiler window inside the editor.
profiling = ["dep:puffin", "dep:puffin_egui"]

[[bin]]
name = "render_gallery"
path = "src/bin/render_gallery/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
eframe = "0.33"
egui = "0.33"
cosmic-text = "0.14"
swash = "0.2"
zeno = "0.3"
hyphenation = { version = "0.8", features = ["embed_all"] }
image = { version = "0.25", default-features = true }
libloading = "0.8"
minijinja = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
tar = "0.4"
ureq = { version = "2", features = ["json", "cookies"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
libc = "0.2"
texture-synthesis = "0.8.2"
translators = { version = "0.1.5", default-features = false, features = ["google"] }
rayon = "1"
ag-psd = "0.1.0"
zspell = "0.5"
genai = "0.6"
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent", "windows-native", "crypto-rust", "vendored"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
puffin = { version = "0.20.0", optional = true }
puffin_egui = { version = "0.30", optional = true }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_UI_Shell", "Win32_Security", "Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_Graphics_Gdi"] }

[build-dependencies]
winresource = "0.1"
serde_json = "1"
