[package]
name = "manhwastudio_rs"
version = "3.5.0"
edition = "2024"

[workspace]
members = [".", "crates/ms-log", "crates/ms-text-util", "crates/ms-text-render", "crates/ms-actions", "crates/ms-storage", "crates/ms-thread", "crates/puffin_egui"]

[features]
active-logs = []
# In-app onboarding tutorial (launcher tour + new-project tour + the "Обучение"
# settings pane). Off by default: the tutorial controller and its `mark` sites
# stay compiled but inert, and all autoplay/overlay rendering plus the settings
# pane are gated out. Enable with `--features tutorial` to restore the tours.
# The `src/tutorial/` engine itself always compiles (the demo bin depends on it).
tutorial = []
# Web (wasm) build switch. Enabled by the wcheck/wbuild aliases and build-wasm.sh.
# Selects the browser storage/network backends and compiles out native-only
# subsystems (subprocess AI backend, sockets, dynamic libs). See docs/WEB_PORT.md.
# Currently a marker feature consumed by cfg(feature = "web") gates; wasm-only
# dependencies are added under [target.'cfg(target_arch = "wasm32")'.dependencies]
# as subsystems are ported.
web = []
# Frame profiler instrumentation. Off by default for zero runtime overhead.
# Enable with `cargo run --features profiling` to record per-frame puffin scopes
# and show the puffin_egui profiler window inside the editor.
profiling = ["dep:puffin", "dep:puffin_egui"]
# Dev/debug: enable egui 0.35's inspection protocol so an external inspector
# (e.g. the `egui_mcp` MCP server) can attach over TCP and read the widget tree,
# inject input, and capture screenshots. Active only when the `EGUI_INSPECTION`
# env var is set at runtime; off by default so production builds are unaffected.
inspection = ["eframe/inspection"]

[[bin]]
name = "render_gallery"
path = "src/bin/render_gallery/main.rs"

[[bin]]
name = "tutorial_test"
path = "src/bin/tutorial_test/main.rs"

# Cross-target dependencies. These compile on both native and wasm32 (pure Rust
# or with first-class wasm support: egui/eframe, image, cosmic-text, serde, zip,
# rayon under the atomics build, etc.). Native-only crates (sockets, native HTTP,
# subprocess/dylib, OS keyring, clipboard, file dialogs) live in the
# cfg(not(wasm32)) block below and their call sites are cfg-gated per WEB_PORT.md.
[dependencies]
ms-log = { path = "crates/ms-log" }
ms-text-util = { path = "crates/ms-text-util" }
ms-text-render = { path = "crates/ms-text-render" }
ms-actions = { path = "crates/ms-actions", features = ["raster"] }
ms-storage = { path = "crates/ms-storage" }
ms-thread = { path = "crates/ms-thread" }
web-time = "1"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
# egui 0.35 changed the eframe default renderer to wgpu; ManhwaStudio uses the
# glow renderer (App::on_exit takes an Option<&glow::Context>), so glow is pinned
# explicitly with default features (incl. wgpu) turned off.
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "accesskit", "wayland", "x11", "web_screen_reader"] }
egui = "0.35"
cosmic-text = "0.14"
swash = "0.2"
zeno = "0.3"
hyphenation = { version = "0.8", features = ["embed_all"] }
image = { version = "0.25", default-features = true }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
libc = "0.2"
texture-synthesis = "0.8.2"
rayon = "1"
ag-psd = "0.1.0"
zspell = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
puffin = { version = "0.20.0", optional = true }
# Vendored & ported to egui 0.35 (crates/puffin_egui); upstream has no 0.34/0.35
# release. See crates/puffin_egui/Cargo.toml.
puffin_egui = { path = "crates/puffin_egui", optional = true }

# Native-only dependencies: native sockets / blocking HTTP (ureq, hf-hub,
# translators, genai+tokio), dynamic library loading (libloading), OS credential
# store (keyring), clipboard (arboard), and native file dialogs (rfd). None have
# a usable wasm32-unknown-unknown path with the current API usage; the web build
# replaces them (fetch, IndexedDB, download) in the web-glue phase.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"
libloading = "0.8"
rfd = "0.15"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
ureq = { version = "2", features = ["json", "cookies"] }
translators = { version = "0.1.5", default-features = false, features = ["google"] }
genai = "0.6"
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent", "windows-native", "crypto-rust", "vendored"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Web-only dependencies. `uuid`'s `js` feature routes its RNG through the browser
# (getrandom js backend) so v4 UUID generation links on wasm. The wasm-bindgen /
# web-sys / futures stack drives the eframe `WebRunner` entry in `web_entry.rs`;
# `console_error_panic_hook` surfaces Rust panics in the browser console.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "console"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_UI_Shell", "Win32_Security", "Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_Graphics_Gdi"] }

[build-dependencies]
winresource = "0.1"
serde_json = "1"
